# Strata-from-SQL

./: Parameter Calculation References 071525.docx  README.md  brainstorming_071725.txt  development_steps.txt  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
strata-interpreter/: README.md  build_exe.py  build_instructions.md  create_release.bat  pyproject.toml  setup.py
strata-interpreter/src/: __init__.py  main.py
strata-interpreter/src/core/: __init__.py  calculations.py  database.py  json_export.py  json_import.py  models.py  validators.py
strata-interpreter/src/gui/: __init__.py  main_window.py
strata-interpreter/src/gui/tabs/: __init__.py  index_values_tab.py  map_profile_tab.py
strata-interpreter/src/gui/widgets/: __init__.py
strata-interpreter/src/resources/: equations.json
strata-interpreter/src/resources/schema/: soil_profile_schema.json
strata-interpreter/src/utils/: color_schemes.py  constants.py
strata-interpreter/tests/: __init__.py  test_calculations.py  test_database.py  test_json_export.py  test_json_import.py
strata_env/: pyvenv.cfg
strata_env/Scripts/: activate  activate.bat
